# magritte

./: .gitignore  .mise.toml  AGENTS.md  Cargo.toml  FEEDBACK.md  LICENSE-MIT  PLAN.md  README.md  TODO.md  rustfmt.toml
.github/workflows/: ci.yml  release-linux.yml  release.yml
crates/magritte/: Cargo.toml
crates/magritte-core/: Cargo.toml
crates/magritte-core/src/: bisect.rs  blame.rs  branch.rs  commit.rs  conflict.rs  diff.rs  error.rs  files.rs  ignore.rs  lib.rs  log.rs  merge.rs  patch.rs  pick.rs  rebase.rs  remote.rs  repo.rs  reset.rs  sequence.rs  stage.rs  stash.rs  status.rs  tag.rs  transient.rs  worktree.rs
crates/magritte-core/src/transient/: menus.rs  mod.rs
crates/magritte-core/tests/: bisect.rs  blame.rs  branch.rs  cancel.rs  commit.rs  conflict.rs  diff.rs  files.rs  ignore.rs  log.rs  merge.rs  patch.rs  pick.rs  rebase.rs  remote.rs  repo.rs  reset.rs  sequence.rs  stage.rs  stash.rs  status.rs  sync.rs  tag.rs  worktree.rs
crates/magritte-core/tests/common/: mod.rs
crates/magritte-ui/: Cargo.toml
crates/magritte-ui/src/: commit_text.rs  debug.rs  generation.rs  ipc.rs  kbd.rs  lib.rs  persist.rs  transient.rs
crates/magritte-ui/src/vim/: engine.rs  mod.rs  motion.rs  surround.rs  tests.rs  text_object.rs
crates/magritte-ui/src/vim/engine/: block.rs  ex.rs  hints.rs
crates/magritte/src/: app_icon.rs  blame_view.rs  commands.rs  commit_diff_view.rs  commit_editor.rs  commit_text.rs  config.rs  controller.rs  debug.rs  diff_render.rs  editor_launch.rs  editors.rs  generation.rs  git_action.rs  highlight.rs  input.rs  ipc.rs  jobs.rs  kbd.rs  list_render.rs  log_view.rs  main.rs  menus.rs  navigation.rs  palette.rs  path_identity.rs  picker.rs  picker_render.rs  rebase_flow.rs  refs_view.rs  render.rs  repo_monitor.rs  resolve_view.rs  row_build.rs  settings.rs  staging.rs  state.rs  status_label.rs  status_loader.rs  targets.rs  (+8 more)
crates/magritte/src/git_transient/: menus.rs  mod.rs
crates/magritte/src/highlight_queries/: cmake.scm  kotlin.scm  proto.scm
crates/magritte/src/vim/: apply.rs  engine.rs  help.rs  mod.rs  motion.rs  surround.rs  tests.rs  text_object.rs
crates/magritte/src/vim/engine/: block.rs  edit.rs  ex.rs  hints.rs
crates/magritte/themes/: catppuccin.json  dracula.json  github.json  gruvbox.json  macos.json  nord.json  selenized.json  solarized.json  tao.json
docs/: config.example.toml  config.md  extensibility.md  magit-parity.md
docs/dev/: magit-parity.md  release.md  text-selection.md  vim-mode.md
packaging/homebrew/: magritte.rb.template
packaging/linux/: magritte.desktop
packaging/macos/: Info.plist.template  Magritte.icns
packaging/macos/icons/: make-icns.sh
scripts/: dbg.sh  dist-linux.sh  dist-macos.sh  playground.sh  render-homebrew-formula.sh  site-shots.sh
site/: README.md  astro.config.mjs  package-lock.json  package.json
site/public/: _headers
site/public/screenshots/: status-dark-mobile.avif  status-dark.avif  status-light-mobile.avif  status-light.avif  tag-dark-mobile.avif  tag-dark.avif  tag-light-mobile.avif  tag-light.avif
site/scripts/: check-links.mjs
site/src/: content.config.ts
site/src/components/: Shot.astro
site/src/layouts/: Base.astro
site/src/lib/: rehype-doc-links.mjs
site/src/pages/: index.astro
site/src/pages/docs/: [...slug].astro  config.example.toml.ts  index.astro
site/src/styles/: global.css
