[package]
name = "magritte-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "UI-agnostic git engine for Magritte: invokes the git CLI and returns structured data."

[dependencies]
# Move discarded files to the system trash instead of deleting them.
trash = "5"

# Restore default SIGPIPE in spawned git children (Rust ignores it
# process-wide, which git's transport inherits and can deadlock on).
[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = "3"
