[package]
name = "magritte-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "App-agnostic UI toolkit shared by Magritte-family apps: picker, keystroke, and commit-text primitives."

[dependencies]
gpui = { workspace = true }
gpui-component = { workspace = true }
