[package]
name = "magritte"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Magritte: a standalone macOS git client in the spirit of magit."

[[bin]]
name = "magritte"
path = "src/main.rs"

[features]
# The debug control channel (key/click injection, screenshots, etc.). Dev-only
# — it lets any process that can write the control dir drive the app, so it is
# compiled out of release builds entirely.
debug = []
# Adds offscreen window capture (`Window::render_to_image`) to the debug
# channel so `shot` can grab the window while the app is backgrounded. Implies
# `debug`; additionally pulls in gpui's `test-support` machinery (proptest,
# backtrace, leak-detection) plus the `image` crate, all excluded from a normal
# `cargo build --release`.
debug-capture = ["debug", "dep:image", "gpui_platform/test-support"]

[dependencies]
# gpui + gpui-component must share the exact same gpui git rev so their types
# unify. These revs are pinned to match gpui-component 0.5.2.
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = ["font-kit", "runtime_shaders", "wayland", "x11"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "8e4930fd687da9133bac06fdc0789e6a179f948c", features = [
    "tree-sitter-languages",
] }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "8e4930fd687da9133bac06fdc0789e6a179f948c" }
magritte-core = { path = "../magritte-core" }
# Native config-file watching (FSEvents on macOS) + the async channel that
# bridges its callback thread to the GPUI executor — no polling.
notify = "7"
async-channel = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# POSIX-style word splitting for the `!` run-git prompt — honors quoting and
# escapes without invoking a shell.
shell-words = "1"
toml = "0.8"
toml_edit = "0.22"
# Extra tree-sitter grammars whose gpui-component registrations have empty
# highlight queries at the pinned revision. Versions match Cargo.lock.
tree-sitter-c-sharp = "0.23.5"
tree-sitter-cmake = "0.7.1"
tree-sitter-kotlin-sg = "0.4.1"
tree-sitter-proto = "0.2.0"
tree-sitter-swift = "0.7.3"
# Only used by the `debug-capture` feature, to encode offscreen-rendered frames.
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }

# macOS-only: window-id lookup for screenshots, and CoreText font traits for
# robust monospace-font detection (vs. glyph-width heuristics).
[target.'cfg(target_os = "macos")'.dependencies]
# Raw Objective-C messaging for the Dock-icon switcher (NSApplication
# applicationIconImage); already in the tree via gpui.
objc = "0.2"
core-foundation = "0.10"
core-graphics = { version = "0.24", features = ["link"] }
core-text = "21"

[lints.rust]
# objc 0.2's msg_send!/sel! macros reference `feature = "cargo-clippy"`, which
# we don't (and shouldn't) declare; expect it so the real unexpected_cfgs lint
# still catches our own typos.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }
