[package]
name = "magritte"
version = "0.8.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Magritte: a standalone macOS git client in the spirit of magit."

[[bin]]
name = "magritte"
path = "src/main.rs"

[features]
# The debug control channel (key/click injection, screenshots, etc.). Dev-only
# — it lets any process that can write the control dir drive the app, so it is
# compiled out of release builds entirely.
debug = ["dep:libc"]
# Adds offscreen window capture (`Window::render_to_image`) to the debug
# channel so `shot` can grab the window while the app is backgrounded. Implies
# `debug`; additionally pulls in gpui's `test-support` machinery (proptest,
# backtrace, leak-detection) plus the `image` crate, all excluded from a normal
# `cargo build --release`.
debug-capture = ["debug", "dep:image", "gpui_platform/test-support"]

[dependencies]
gpui = { workspace = true }
gpui_platform = { workspace = true }
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }
magritte-core = { workspace = true }
magritte-ui = { workspace = true }
# Native config-file watching (FSEvents on macOS) + the async channel that
# bridges its callback thread to the GPUI executor — no polling.
notify = "7"
async-channel = { workspace = true }
regex = "1"
serde = { workspace = true }
serde_json = "1"
# POSIX-style word splitting for the `!` run-git prompt — honors quoting and
# escapes without invoking a shell.
shell-words = "1"
indexmap = { workspace = true }
toml = { workspace = true }
toml_edit = "0.22"
# Extra tree-sitter grammars whose gpui-component registrations have empty
# highlight queries at the pinned revision. Versions match Cargo.lock.
tree-sitter-c-sharp = "0.23.5"
tree-sitter-cmake = "0.7.1"
tree-sitter-kotlin-sg = "0.4.1"
tree-sitter-proto = "0.2.0"
tree-sitter-swift = "0.7.3"
# Only used by the `debug-capture` feature, to encode offscreen-rendered frames.
image = { workspace = true, optional = true }
# Only used by the `debug` feature (control-dir ownership check).
libc = { workspace = true, optional = true }

# macOS-only: window-id lookup for screenshots, and CoreText font traits for
# robust monospace-font detection (vs. glyph-width heuristics).
[target.'cfg(target_os = "macos")'.dependencies]
# Raw Objective-C messaging for the Dock-icon switcher (NSApplication
# applicationIconImage); already in the tree via gpui.
objc = "0.2"
core-foundation = { workspace = true }
core-graphics = { workspace = true }
core-text = "21"

[lints.rust]
# objc 0.2's msg_send!/sel! macros reference `feature = "cargo-clippy"`, which
# we don't (and shouldn't) declare; expect it so the real unexpected_cfgs lint
# still catches our own typos.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }
