[package]
name = "magritte"
version = "0.8.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Magritte: a standalone macOS git client in the spirit of magit."

[[bin]]
name = "magritte"
path = "src/main.rs"

[features]
# The debug control channel and its offscreen-capture variant live in
# magritte-ui; these forward so `--features debug[-capture]` keeps working.
debug = ["magritte-ui/debug"]
debug-capture = ["debug", "magritte-ui/debug-capture"]

[dependencies]
gpui = { workspace = true }
gpui_platform = { workspace = true }
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }
magritte-core = { workspace = true }
magritte-ui = { workspace = true }
# Native config-file watching (FSEvents on macOS) + the async channel that
# bridges its callback thread to the GPUI executor — no polling.
notify = "7"
async-channel = { workspace = true }
regex = "1"
serde = { workspace = true }
serde_json = "1"
# POSIX-style word splitting for the `!` run-git prompt — honors quoting and
# escapes without invoking a shell.
shell-words = "1"
indexmap = { workspace = true }
toml = { workspace = true }
toml_edit = "0.22"
# Extra tree-sitter grammars whose gpui-component registrations have empty
# highlight queries at the pinned revision. Versions match Cargo.lock.
tree-sitter-c-sharp = "0.23.5"
tree-sitter-cmake = "0.7.1"
tree-sitter-kotlin-sg = "0.4.1"
tree-sitter-proto = "0.2.0"
tree-sitter-swift = "0.7.3"

# macOS-only: default-editor lookup, and CoreText font traits for robust
# monospace-font detection (vs. glyph-width heuristics).
[target.'cfg(target_os = "macos")'.dependencies]
# Raw Objective-C messaging for the Dock-icon switcher (NSApplication
# applicationIconImage); already in the tree via gpui.
objc = "0.2"
core-foundation = { workspace = true }
core-text = "21"

[lints.rust]
# objc 0.2's msg_send!/sel! macros reference `feature = "cargo-clippy"`, which
# we don't (and shouldn't) declare; expect it so the real unexpected_cfgs lint
# still catches our own typos.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }
